<resources>
    <string name="app_name">FragmentTest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Jobs">Jobs</string>
    <string name="MyJobs">Mis Jobs</string>
    <string name="Profile">Mi Perfil</string>
    <string name="Settings">Configuración</string>
    <string name="App_test">Protopipo Mobijob Drawer</string>
    <string name="txLogin">Iniciar Sesion</string>
    <string name="fb_sign_in">CONECTARSE CON FACEBOOK</string>
    <string name="password">Contraseña</string>
    <string name="not_account">¿No tienes cuenta?</string>
    <string name="register_here">Regístrate aquí</string>
    <string name="login_bt">INICIAR SESION</string>
    <string name="skip">SALTAR</string>
    <string name="register">Resgistro</string>
    <string name="dni">CC #</string>
    <string name="form_name">Nombre</string>
    <string name="user">Usuario</string>
    <string name="surname">Apellido</string>
    <string name="mail">Mail</string>
    <string name="Contraseña">Contraseña</string>
    <string name="already_have_account">¿Ya tienes una cuenta?</string>
    <string name="sign_in_here">Inicia sesión aquí</string>

</resources>
