<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity">

    <TextView android:layout_width="wrap_content"
              android:id="@+id/tv_skip"
              android:layout_height="wrap_content"
              android:text="@string/skip"
              android:layout_gravity="center_vertical"
              android:padding="12dp"
              android:layout_weight="0.5"
              android:textAlignment="center"
              app:layout_constraintBottom_toTopOf="@+id/glh_top"
              app:layout_constraintEnd_toStartOf="@+id/glv_right"/>

    <ImageView
            android:layout_width="137dp"
            android:layout_height="68dp"
            app:srcCompat="@drawable/hlogo"
            android:id="@+id/ivHlogo"
            android:paddingLeft="1dp"
            app:layout_constraintStart_toStartOf="@+id/glv_left"
            app:layout_constraintTop_toTopOf="@+id/glh_top"

    />
    <android.support.constraint.Guideline android:layout_width="wrap_content"
                                          android:layout_height="wrap_content"
                                          android:id="@+id/glv_left"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_percent="0.1"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content"
                                          android:layout_height="wrap_content"
                                          android:id="@+id/glv_left2"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_percent="0.02"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content"
                                          android:layout_height="wrap_content"
                                          android:id="@+id/glv_right"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_percent="0.9"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content"
                                          android:layout_height="wrap_content"
                                          android:id="@+id/glv_right2"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_percent="0.98"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/glh_top"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.1"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/glh_bottom"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.98"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/glh_top_login_cv"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.3"/>
    <TextView
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_Login"
            android:textSize="@dimen/txLogin"
            app:layout_constraintTop_toBottomOf="@+id/ivHlogo"
            app:layout_constraintStart_toStartOf="@+id/glv_left"
            android:textStyle="bold"
            android:textColor="@android:color/black"
    />

    <ImageView android:layout_width="66dp"
               android:layout_height="65dp"
               app:srcCompat="@drawable/myjobs"
               android:id="@+id/ivProfilePic"
               android:padding="0dp"

               app:layout_constraintRight_toLeftOf="@+id/glv_right"
               app:layout_constraintBottom_toBottomOf="@+id/tv_Login"
               android:layout_marginTop="8dp"
               app:layout_constraintTop_toTopOf="@+id/glh_top"
               app:layout_constraintVertical_bias="1.0"/>


    <android.support.v7.widget.CardView android:layout_width="391dp"
                                        android:layout_height="wrap_content"
                                        app:cardCornerRadius="8dp"
                                        android:id="@+id/cardView"
                                        app:layout_constraintTop_toTopOf="@+id/glh_top_login_cv"
                                        app:layout_constraintStart_toStartOf="@+id/glv_left2"
                                        app:layout_constraintEnd_toStartOf="@+id/glv_right2"
                                        >

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
        >
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/dni"
                      android:textColor="@color/colorAccent"
                      android:layout_marginEnd="@dimen/et_form_padding"
                      android:layout_marginStart="@dimen/et_form_padding"
                      android:textSize="@dimen/login_regular_text"
                      android:id="@+id/et_CC"
            />

            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColor="@color/colorAccent"
                      android:layout_marginEnd="@dimen/et_form_padding"
                      android:layout_marginStart="@dimen/et_form_padding"
                      android:textSize="@dimen/login_regular_text"
                      android:id="@+id/et_User"
                      android:gravity="bottom"
                      android:hint="@string/user"
            />

            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/form_name"
                      android:textColor="@color/colorAccent"
                      android:layout_marginEnd="@dimen/et_form_padding"
                      android:layout_marginStart="@dimen/et_form_padding"
                      android:textSize="@dimen/login_regular_text"
                      android:id="@+id/et_userName"
                      android:gravity="bottom"
            />

            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/surname"
                      android:textColor="@color/colorAccent"
                      android:layout_marginEnd="@dimen/et_form_padding"
                      android:layout_marginStart="@dimen/et_form_padding"
                      android:textSize="@dimen/login_regular_text"
                      android:id="@+id/et_surname"
                      android:gravity="bottom"
            />

            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/mail"
                      android:textColor="@color/colorAccent"
                      android:layout_marginEnd="@dimen/et_form_padding"
                      android:layout_marginStart="@dimen/et_form_padding"
                      android:textSize="@dimen/login_regular_text"
                      android:id="@+id/et_mail"
                      android:gravity="bottom"
            />

            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/Contraseña"
                      android:textColor="@color/colorAccent"
                      android:layout_marginEnd="@dimen/et_form_padding"
                      android:layout_marginStart="@dimen/et_form_padding"
                      android:textSize="@dimen/login_regular_text"
                      android:id="@+id/password"
                      android:gravity="bottom"
            />

            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/Contraseña"
                      android:textColor="@color/colorAccent"
                      android:layout_marginEnd="@dimen/et_form_padding"
                      android:layout_marginStart="@dimen/et_form_padding"
                      android:textSize="@dimen/login_regular_text"
                      android:id="@+id/password_confirm"
                      android:gravity="bottom"
            />

            <android.support.design.button.MaterialButton
                    android:text="@string/login_bt"
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="74dp"
                    android:id="@+id/bt_login"
                    android:backgroundTint="@color/colorPrimary"
                    app:cornerRadius="2dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
            />




        </LinearLayout>


    </android.support.v7.widget.CardView>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="49dp"
                  android:orientation="horizontal"
                  android:weightSum="1"

                  tools:layout_editor_absoluteX="0dp" android:layout_marginTop="8dp"
                  app:layout_constraintTop_toBottomOf="@+id/cardView">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/already_have_account"
                  android:layout_gravity="center_vertical"
                  android:textAlignment="textEnd"
                  android:layout_weight="0.5"
                  android:padding="5dp"

        />
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/sign_in"
                  android:text="@string/sign_in_here"
                  android:layout_gravity="center_vertical"
                  android:textAlignment="textStart"
                  android:padding="5dp"
                  android:layout_weight="0.5"
                  android:textColor="@color/mobijobGreen"
        />

    </LinearLayout>



</android.support.constraint.ConstraintLayout>