<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
>

    <TextView android:layout_width="wrap_content"
              android:id="@+id/tv_skip"
              android:layout_height="wrap_content"
              android:text="@string/skip"
              android:layout_gravity="center_vertical"
              android:padding="12dp"
              android:layout_weight="0.5"
              android:textAlignment="center"
              app:layout_constraintBottom_toTopOf="@+id/glh_top"
              app:layout_constraintEnd_toStartOf="@+id/glv_right"/>

    <ImageView
            android:layout_width="137dp"
            android:layout_height="68dp"
            app:srcCompat="@drawable/hlogo"
            android:id="@+id/ivHlogo"
            android:paddingLeft="1dp"
            app:layout_constraintStart_toStartOf="@+id/glv_left"
            app:layout_constraintTop_toTopOf="@+id/glh_top"

    />
    <android.support.constraint.Guideline android:layout_width="wrap_content"
                                          android:layout_height="wrap_content"
                                          android:id="@+id/glv_left"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_percent="0.1"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content"
                                          android:layout_height="wrap_content"
                                          android:id="@+id/glv_right"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_percent="0.9"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/glh_top"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.1"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/glh_bottom"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.9"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/glh_top_login_cv"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.33"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/glh_bottom_login_cv"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.8"/>
    <TextView
            android:text="@string/txLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_Login"
            android:textSize="@dimen/txLogin"
            app:layout_constraintTop_toBottomOf="@+id/ivHlogo"
            app:layout_constraintStart_toStartOf="@+id/glv_left"
            android:textStyle="bold"
            android:textColor="@android:color/black"
    />

    <ImageView android:layout_width="66dp"
               android:layout_height="65dp"
               app:srcCompat="@drawable/myjobs"
               android:id="@+id/ivProfilePic"
               android:padding="0dp"

               app:layout_constraintRight_toLeftOf="@+id/glv_right"
               app:layout_constraintBottom_toBottomOf="@+id/tv_Login"
               android:layout_marginTop="8dp"
               app:layout_constraintTop_toTopOf="@+id/glh_top"
               app:layout_constraintVertical_bias="1.0"/>


    <android.support.v7.widget.CardView android:layout_width="324dp"
                                        android:layout_height="296dp"
                                        app:layout_constraintEnd_toStartOf="@+id/glv_right"
                                        app:cardCornerRadius="4dp"
                                        android:id="@+id/cardView" android:layout_marginTop="8dp"
                                        app:layout_constraintTop_toTopOf="@+id/glh_top_login_cv"
                                        app:layout_constraintStart_toStartOf="@+id/glv_left"
                                        app:layout_constraintHorizontal_bias="1.0"
    >

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
        >
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/user"
                      android:textColor="@color/colorAccent"
                      android:layout_margin="8dp"
                      android:textSize="@dimen/login_regular_text"
                      android:id="@+id/et_User"
            />

            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/password"
                      android:textColor="@color/colorAccent"
                      android:layout_margin="8dp"
                      android:textSize="@dimen/login_regular_text"
                      android:id="@+id/et_Password"
                      android:gravity="bottom"
                      android:drawableRight="@drawable/baseline_fingerprint_24"
            />

            <android.support.design.button.MaterialButton
                    android:text="@string/login_bt"
                    android:textColor="@android:color/white"
                    android:layout_width="337dp"
                    android:layout_height="74dp"
                    android:id="@+id/bt_login"
                    app:layout_constraintTop_toTopOf="@+id/glh_bottom_login_cv"
                    app:layout_constraintStart_toStartOf="@+id/cardView"
                    app:layout_constraintBottom_toTopOf="@+id/glh_bottom"
                    app:layout_constraintHorizontal_bias="0.545"
                    app:layout_constraintVertical_bias="0.0"
                    app:layout_constraintEnd_toEndOf="@+id/cardView"
                    android:backgroundTint="@color/colorPrimary"
                    app:cornerRadius="8dp"
            />
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textSize="25dp"
                      android:drawableRight="@drawable/round_lock_open_black_18dp"
                      android:layout_margin="8dp"
                      android:layout_gravity="right"
                      android:paddingRight="8dp"
            />

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:weightSum="1"

            >
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/not_account"
                          android:layout_gravity="center_vertical"
                          android:padding="12dp"
                          android:layout_weight="0.5"
                          android:textAlignment="center"
                />
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/register_here"
                          android:layout_gravity="center_vertical"
                          android:textAlignment="center"
                          android:padding="12dp"
                          android:layout_weight="0.5"
                          android:textColor="@color/mobijobGreen"
                />

            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>


    <android.support.design.button.MaterialButton
            android:text="@string/fb_sign_in"
            android:textColor="@android:color/white"
            android:layout_width="337dp"
            android:layout_height="74dp"
            android:id="@+id/button"
            app:layout_constraintTop_toTopOf="@+id/glh_bottom_login_cv"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintBottom_toTopOf="@+id/glh_bottom"
            app:layout_constraintHorizontal_bias="0.545"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            android:backgroundTint="@color/deepBlue"
            android:drawableLeft="@drawable/facebook"
            android:paddingLeft="25dp"
            app:cornerRadius="8dp"
    />


</android.support.constraint.ConstraintLayout>
